--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -4,12 +4,13 @@
   <ul>
     <li>Требуется хотя бы один из атрибутов: label, icon-left, icon-right.</li>
     <li>Для создания кнопки с одной иконкой, можно использовать icon-left или icon-right.</li>
-    <li>label - реактивный, не обязательный. Текст кнопки.</li>
-    <li>icon-left - реактивный, не обязательный. Имя иконки расположенной по левому краю.</li>
-    <li>icon-right - реактивный, не обязательный. Имя иконки расположенной по правому краю.</li>
-    <li>height - статичный, не обязательный. Высота кнопки (число), по умолчанию - 32, измеряется в пикселях. (рекомендуется от 24 до 40). Лучше использовать чётные числа.</li>
+    <li>label - реактивный, не обязательный атрибут. Текст кнопки, непрерывная строка.</li>
+    <li>icon-left - реактивный, не обязательный атрибут. Имя иконки расположенной по левому краю.</li>
+    <li>icon-right - реактивный, не обязательный атрибут. Имя иконки расположенной по правому краю.</li>
+    <li>height - статичный, не обязательный атрибут. Высота кнопки (число), по умолчанию - 32, измеряется в пикселях. (рекомендуется от 24 до 40). Лучше использовать чётные числа.</li>
     <li>Размер шрифта изменяется автоматически, рассчитывается по формуле "выcота кнопки / 2"</li>
-    <li>disabled - реактивный, не обязательный, состояние.</li>
+    <li>text-align - "left"или "right" расположение текста. По умолчанию по центру.</li>
+    <li>disabled - реактивный, не обязательный атрибут, отвечает за состояние.</li>
   </ul>
 </section>
 
@@ -65,8 +66,6 @@
     <div class="preview">
       <ui-button icon-left="article" label="Кнопка"></ui-button>
       <ui-button icon-right="article" label="Кнопка"></ui-button>
-      <ui-button icon-right="article" label="Кнопка" text-align="left" style="width:150px;"></ui-button>
-      <ui-button icon-left="article" label="Кнопка" text-align="right" style="width:150px;"></ui-button>
     </div>
     <code>
       <span>&lt;ui-button icon-left="article" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
