--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -54,7 +54,7 @@
   <span>Неактивная кнопка.</span>
   <div class="example">
     <div class="preview">
-      <ui-button label="Кнопка" disabled></ui-button>
+      <ui-button id="test" label="Кнопка" disabled></ui-button>
     </div>
     <code>
       <span>&lt;ui-button label="Кнопка" disabled&gt;&lt;/ui-button&gt;</span>
