--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@ function loadContent(page){
 }
 </script>
 
-<script type="module" src="components/ui-components.js"></script>
+<script type="module" src="components/ui.js"></script>
 </body>
 </html>
