--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <script id="script"></script>
 
 <script>
-loadContent('pages/icons.html');
+loadContent('pages/ui-icon.html');
 function loadContent(page){
   fetch(page)
   .then(response => response.text())
