--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <script id="script"></script>
 
 <script>
-loadContent('pages/ui-button.html');
+loadContent('pages/icons.html');
 function loadContent(page){
   fetch(page)
   .then(response => response.text())
@@ -83,6 +83,6 @@ function loadContent(page){
 }
 </script>
 
-<script type="module" src="components/ui.js"></script>
+<script type="module" src="components/index.js"></script>
 </body>
 </html>
