--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -18,36 +18,30 @@
   <span>Высота 24.</span>
   <div class="example">
     <div class="preview">
-      <ui-button label="Кнопка" height="24"></ui-button>
-      <ui-button icon-left="article" height="24"></ui-button>
+      <ui-button label="Кнопка" icon-left="article" height="24"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button label="Кнопка" height="24"&gt;&lt;/ui-button&gt;</span>
-      <span>&lt;ui-button icon-left="article" height="24"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button label="Кнопка" icon-left="article" height="24"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
   <span>Высота 32. (высота по умолчанию)</span>
   <div class="example">
     <div class="preview">
-      <ui-button label="Кнопка"></ui-button>
-      <ui-button icon-left="article"></ui-button>
+      <ui-button label="Кнопка" icon-left="article"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button label="Кнопка"&gt;&lt;/ui-button&gt;</span>
-      <span>&lt;ui-button icon-left="article"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button label="Кнопка" icon-left="article"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
   <span>Высота 40.</span>
   <div class="example">
     <div class="preview">
-      <ui-button label="Кнопка" height="40"></ui-button>
-      <ui-button icon-left="article" height="40"></ui-button>
+      <ui-button label="Кнопка" icon-left="article" height="40"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button label="Кнопка" height="40"&gt;&lt;/ui-button&gt;</span>
-      <span>&lt;ui-button icon-left="article" height="40"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button label="Кнопка" icon-left="article" height="40"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
