--- a/pages/icons.html
+++ b/pages/icons.html
@@ -16,8 +16,7 @@
     <ui-icon icon="send"></ui-icon>
     <ui-icon icon="bell"></ui-icon>
     <ui-icon icon="gear"></ui-icon>
-    <ui-icon icon="cross"></ui-icon>
-    <ui-icon icon="clear"></ui-icon>
+    <ui-icon icon="cancel"></ui-icon>
   </div>
 </section>
 
