--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -23,10 +23,10 @@
 
   <div class="example">
     <div class="preview">
-      <ui-input placeholder="Пароль" icon-left="article" icon-right="bell" type="password" required></ui-input>
+      <ui-input placeholder="Пароль" icon-left="article" icon-right="send" type="password" required></ui-input>
     </div>
     <code>
-    &lt;ui-input placeholder="Пароль" icon-left="article" icon-right="bell" type="password"&gt;&lt;/ui-input&gt;
+    &lt;ui-input placeholder="Пароль" icon-left="article" icon-right="send" type="password"&gt;&lt;/ui-input&gt;
     </code>
   </div>
 </section>
