--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -18,30 +18,30 @@
   <span>Высота 24.</span>
   <div class="example">
     <div class="preview">
-      <ui-button label="Кнопка" icon-left="article" height="24"></ui-button>
+      <ui-button label="Кнопка" icon-left="gear" height="24"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button label="Кнопка" icon-left="article" height="24"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button label="Кнопка" icon-left="gear" height="24"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
   <span>Высота 32. (высота по умолчанию)</span>
   <div class="example">
     <div class="preview">
-      <ui-button label="Кнопка" icon-left="article"></ui-button>
+      <ui-button label="Кнопка" icon-left="gear"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button label="Кнопка" icon-left="article"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button label="Кнопка" icon-left="gear"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
   <span>Высота 40.</span>
   <div class="example">
     <div class="preview">
-      <ui-button label="Кнопка" icon-left="article" height="40"></ui-button>
+      <ui-button label="Кнопка" icon-left="gear" height="40"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button label="Кнопка" icon-left="article" height="40"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button label="Кнопка" icon-left="gear" height="40"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
@@ -58,22 +58,22 @@
   <span>Текст и иконка с одной стороны.</span>
   <div class="example">
     <div class="preview">
-      <ui-button icon-left="article" label="Кнопка"></ui-button>
-      <ui-button icon-right="article" label="Кнопка"></ui-button>
+      <ui-button icon-left="gear" label="Кнопка"></ui-button>
+      <ui-button icon-right="gear" label="Кнопка"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button icon-left="article" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
-      <span>&lt;ui-button icon-right="article" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-left="gear" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-right="gear" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
   <div class="example">
     <div class="preview">
-      <ui-button icon-left="article" icon-right="send" label="Кнопка"></ui-button> 
-      <ui-button style="width:150px;" icon-left="article" icon-right="send" label="Кнопка"></ui-button>
+      <ui-button icon-left="gear" icon-right="send" label="Кнопка"></ui-button> 
+      <ui-button style="width:150px;" icon-left="gear" icon-right="send" label="Кнопка"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button icon-left="article" icon-right="send" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-left="gear" icon-right="send" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 </section>
