--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -4,13 +4,12 @@
   <ul>
     <li>Требуется хотя бы один из атрибутов: label, icon-left, icon-right.</li>
     <li>Для создания кнопки с одной иконкой, можно использовать icon-left или icon-right.</li>
-    <li>label - реактивный, не обязательный атрибут. Текст кнопки, непрерывная строка.</li>
-    <li>icon-left - реактивный, не обязательный атрибут. Имя иконки расположенной по левому краю.</li>
-    <li>icon-right - реактивный, не обязательный атрибут. Имя иконки расположенной по правому краю.</li>
-    <li>height - статичный, не обязательный атрибут. Высота кнопки (число), по умолчанию - 32, измеряется в пикселях. (рекомендуется от 24 до 40). Лучше использовать чётные числа.</li>
+    <li>label - реактивный, необязательный атрибут. Текст кнопки, непрерывная строка.</li>
+    <li>icon-left и icon-right — реактивные, необязательные атрибуты. Определяют имена иконок, отображаемых соответственно слева и справа.</li>
+    <li>height - статичный, необязательный атрибут. Высота кнопки (число), по умолчанию - 32, измеряется в пикселях. (рекомендуется от 24 до 40). Лучше использовать чётные числа.</li>
     <li>Размер шрифта изменяется автоматически, рассчитывается по формуле "выcота кнопки / 2"</li>
-    <li>text-align - "left"или "right" расположение текста. По умолчанию по центру.</li>
-    <li>disabled - реактивный, не обязательный атрибут, отвечает за состояние.</li>
+    <li>text-align - "left" или "right" расположение текста. По умолчанию по центру.</li>
+    <li>disabled - реактивный, необязательный атрибут, управляющий состоянием компонента (отключён/включён).</li>
   </ul>
 </section>
 
