--- a/pages/icons.html
+++ b/pages/icons.html
@@ -2,7 +2,7 @@
   <span class="title">Иконки</span>
   <span class="description">Коллекция иконок.</span>
   <ul>
-    <li>Толщина линии до конвертации: 2px.</li>
+    <li>Толщина линии: 2px.</li>
     <li>Закругление угла: 2px.</li>
   </ul>
 </section>
