--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="menuItem">
           <span onclick="navigate('icons')" data-page="icons">
-           Иконки
+           Каталог иконок
           </span>
         </div>
 
