--- a/pages/icons.html
+++ b/pages/icons.html
@@ -1,5 +1,5 @@
 <section class="intro">
-  <span class="title">Иконки</span>
+  <span class="title">Каталог иконок</span>
   <span class="description">Коллекция иконок.</span>
   <ul>
     <li>Толщина линии: 2px.</li>
