--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -72,13 +72,33 @@
     </code>
   </div>
 
-  <span>Ошибка</span>
+  <span>Ошибка.</span>
   <div class="example">
     <div class="preview">
       <ui-input error></ui-input>
     </div>
     <code>
       &lt;ui-input error&gt;&lt;/ui-input&gt;
+    </code>
+  </div>
+
+  <span>Успех.</span>
+  <div class="example">
+    <div class="preview">
+      <ui-input valid></ui-input>
+    </div>
+    <code>
+      &lt;ui-input valid&gt;&lt;/ui-input&gt;
+    </code>
+  </div>
+
+  <span>Предупреждение.</span>
+  <div class="example">
+    <div class="preview">
+      <ui-input warning></ui-input>
+    </div>
+    <code>
+      &lt;ui-input warning&gt;&lt;/ui-input&gt;
     </code>
   </div>
 </section>
