--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="utf-8">
 <link rel="icon" href="data:,">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="theme.css">
+<link rel="stylesheet" href="./theme/theme.css">
+<link rel="stylesheet" href="./ui/ui-styles.css">
 <title>Web Components</title>
 </head>
 <body>
@@ -62,7 +63,7 @@
 <article id="article"></article>
 </div>
 
-<script type="module" src="./router.js"></script>
-<script type="module" src="components/index.js"></script>
+<script type="module" src="./theme/router.js"></script>
+<script type="module" src="./ui/ui-components.js"></script>
 </body>
 </html>
