--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -3,10 +3,10 @@
   <span class="description">Компонент, который может выступать в роли ссылки или запускать действие.</span>
   <ul>
     <li>Поддерживает LTR и RTL.</li>
-    <li>Требуется хотя бы один из атрибутов: label, icon-start, icon-end.</li>
+    <li>Требуется хотя бы один из атрибутов: label, icon-leading, icon-trailing.</li>
     <li>label - реактивный, необязательный атрибут. Текст кнопки, непрерывная строка.</li>
-    <li>icon-start и icon-end — реактивные, необязательные атрибуты. Определяют имена иконок, отображаемых соответственно до и после текста.</li>
-    <li>Для создания кнопки с одной иконкой, можно использовать icon-start или icon-end.</li>
+    <li>icon-leading и icon-trailing — реактивные, необязательные атрибуты. Определяют имена иконок, отображаемых соответственно до и после текста.</li>
+    <li>Для создания кнопки с одной иконкой, можно использовать icon-leading или icon-trailing.</li>
     <li>height - статичный, необязательный атрибут. Высота кнопки (число), по умолчанию - 32, измеряется в пикселях. (рекомендуется от 24 до 40). Лучше использовать чётные числа.</li>
     <li>Размер шрифта изменяется автоматически, рассчитывается по формуле "выcота кнопки / 2"</li>
     <li>disabled - реактивный, необязательный атрибут, управляющий состоянием компонента (отключён/включён).</li>
@@ -17,11 +17,11 @@
   <span>Высота 24.</span>
   <div class="example">
     <div class="preview">
-      <ui-button icon-start="gear" height="24"></ui-button>
+      <ui-button icon-leading="gear" height="24"></ui-button>
       <ui-button label="Кнопка" height="24"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button icon-start="gear" height="24"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-leading="gear" height="24"&gt;&lt;/ui-button&gt;</span>
       <span>&lt;ui-button label="Кнопка" height="24"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
@@ -29,11 +29,11 @@
   <span>Высота 32. (высота по умолчанию)</span>
   <div class="example">
     <div class="preview">
-      <ui-button icon-start="gear"></ui-button>
+      <ui-button icon-leading="gear"></ui-button>
       <ui-button label="Кнопка"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button icon-start="gear"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-leading="gear"&gt;&lt;/ui-button&gt;</span>
       <span>&lt;ui-button label="Кнопка"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
@@ -41,11 +41,11 @@
   <span>Высота 40.</span>
   <div class="example">
     <div class="preview">
-      <ui-button icon-start="gear" height="40"></ui-button>
+      <ui-button icon-leading="gear" height="40"></ui-button>
       <ui-button label="Кнопка" height="40"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button icon-start="gear" height="40"&gt;&lt;/ui-button&gt;
+      <span>&lt;ui-button icon-leading="gear" height="40"&gt;&lt;/ui-button&gt;
       <span>&lt;ui-button label="Кнопка" height="40"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
@@ -63,22 +63,22 @@
   <span>Текст и иконка с одной стороны.</span>
   <div class="example">
     <div class="preview">
-      <ui-button icon-start="gear" label="Кнопка"></ui-button>
-      <ui-button icon-end="gear" label="Кнопка"></ui-button>
+      <ui-button icon-leading="gear" label="Кнопка"></ui-button>
+      <ui-button icon-trailing="gear" label="Кнопка"></ui-button>
     </div>
     <code>
-      <span>&lt;ui-button icon-start="gear" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
-      <span>&lt;ui-button icon-end="gear" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-leading="gear" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-trailing="gear" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
   <span>Текст с иконками по обе стороны.</span>
   <div class="example">
     <div class="preview">
-      <ui-button icon-start="gear" icon-end="send" label="Кнопка"></ui-button> 
+      <ui-button icon-leading="gear" icon-trailing="send" label="Кнопка"></ui-button> 
     </div>
     <code>
-      <span>&lt;ui-button icon-start="gear" icon-end="send" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-leading="gear" icon-trailing="send" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 </section>
