--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -2,8 +2,8 @@
   <span class="title">Иконка</span>
   <span class="description">Компонент для отображения иконки.</span>
   <ul>
-    <li>icon - реактивный, обязательный атрибут, может содержать буквы (латиница a-z A-Z) и цифры (0-9), начало с букв.</li>
-    <li>fill - currentColor, цвет svg зависит от цвета шрифта указанного в родительском элементе.</li>
+    <li>icon - реактивный, обязательный атрибут.</li>
+    <li>Цвет svg зависит от цвета шрифта указанного в родительском элементе. (currentColor)</li>
   </ul>
 </section>
 
