--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -22,7 +22,7 @@
     </code>
   </div>
 
-  <span>Горизонтальный разделитель с текстом по центру.</span>
+  <span>Текст по центру.</span>
   <div class="example">
     <div class="preview">
       <ui-divider label="Текст"></ui-divider>
@@ -32,7 +32,7 @@
     </code>
   </div>
 
-  <span>Горизонтальный разделитель с текстом слева.</span>
+  <span>Текст слева.</span>
   <div class="example">
     <div class="preview">
       <ui-divider label="Текст" text-align="start"></ui-divider>
@@ -42,7 +42,7 @@
     </code>
   </div>
 
-  <span>Горизонтальный разделитель с текстом справа.</span>
+  <span>Текст справа.</span>
   <div class="example">
     <div class="preview">
       <ui-divider label="Текст" text-align="end"></ui-divider>
@@ -62,7 +62,7 @@
     </code>
   </div>
 
-  <span>Вертикальный разделитель с текстом по центру.</span>
+  <span>Текст по центру.</span>
   <div class="example">
     <div class="preview" style="height:150px;">
       <ui-divider label="Текст" axis="y"></ui-divider>
@@ -72,7 +72,7 @@
     </code>
   </div>
 
-  <span>Вертикальный разделитель с текстом сверху.</span>
+  <span>Текст сверху.</span>
   <div class="example">
     <div class="preview" style="height:150px;">
       <ui-divider label="Текст" axis="y" text-align="start"></ui-divider>
@@ -82,7 +82,7 @@
     </code>
   </div>
 
-  <span>Вертикальный разделитель с текстом снизу.</span>
+  <span>Текст снизу.</span>
   <div class="example">
     <div class="preview" style="height:150px;">
       <ui-divider label="Текст" axis="y" text-align="end"></ui-divider>
